# flask_page_analyzer

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  setup.cfg
.github/workflows/: README.md  make-check.yml  my-check.yml
page_analyzer/: app.py  db_connector.py  url_check.py
page_analyzer/templates/: index.html  url.html  urls.html
